# Blackerz-SDK-Python

./: .travis.yml  Makefile  README.md  manifest.in  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: hagn.yml  main.yml
bot/: bot_data.py  edit_bot.py
lib/: __init__.py
src/blackerz_wrapper/: __init__.py
src/blackerz_wrapper/lib/: __init__.py  __main__.py  base_request.py  main.py  warns.py
src/blackerz_wrapper/lib/bot/: bot_data.py  check_vote.py  edit_bot.py  servercount.py
src/blackerz_wrapper/lib/util/: base_request.py
