[metadata]
# replace with your username:
name = blackerz-wrapper
version = 0.0.23
author = Fastering18
author_email = brahmana081@gmail.com
description = Developer kit to interact with our API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Fastering18/Blackerz-Wrapper-Python
project_urls =
    Bug Tracker = https://github.com/Fastering18/Blackerz-SDK-Python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=2.6

[options.packages.find]
where = src